# Cargo.toml

[package]
authors = ["Sami J. Mäkinen <sjm@iki.fi>"]
edition = "2024"
resolver = "2"
readme = "README.md"
name = "mqtt2coap"
version = "1.2.1"


[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
coap = "0.19"
rumqttc = "0.24"
serde_json = "1"
tokio = "1"
tracing = { version = "0", features = ["log"] }
tracing-subscriber = "0"


[build-dependencies]
anyhow = "1"
build-data = "0"


[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"

# EOF
